# smbwebclient

./: .env.example  .gitignore  .releaserc.yaml  CHANGELOG.md  Caddyfile  Cargo.toml  Dockerfile  LICENSE  README.md  composer.json  debug-anonymous.sh  docker-compose.yaml  docker-compose.yml  makefile  makefile.php  phpunit.xml  smb.conf  smb1.conf  smb2.conf  smbwebclient-test.php  smbwebclient.php  sonar-project.properties  test-smb-auth.php  test-smb.php
.docker/php/: Dockerfile
.github/: FUNDING.yml  dependabot.yml
api/: Dockerfile  package.json
api/src/: auth.js  (+1 more)
client/: index.html  nginx.conf  package-lock.json  package.json
contrib/: js_checkbox.patch
mobile/: App.js  api.js  package-lock.json  package.json
php/: debug.php  gpl.php  header.php  includes.php  languages.php  main.php  mime.php  settings.php  smb.php  smbwebclient.php  strings.php  style.php  translators.php
public/: index.php
samba_share/: hello.txt
server/: package-lock.json  package.json
src/: Application.php  Config.php  FileActionHandler.php  HtmlRenderer.php  InputValidator.php  RateLimiter.php  Router.php  Session.php  SmbClient.php  Translator.php  auth.rs  config.rs  main.rs  smb_handler.rs  web_handlers.rs
style/: style.css  template-auth.html  template-confirmoverwrite.html  template-error.html  template-listview.html  template-page.html
templates/: browser.html  layout.html  login.html
tui/: Dockerfile  package-lock.json  package.json  tsconfig.json
verification/: verify_smb.py  verify_web.py
web/: Dockerfile  astro.config.mjs  nginx.conf  package.json
(+51 files in other folders)
