[package]
name = "smb-handler-example"
version = "0.1.0"
edition = "2021"

[dependencies]
smbclient-rs = "0.5.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
futures = "0.3"
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"

# New dependencies for web interface
actix-web = "4"
actix-files = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] } # Renamed from actix-cookie-session
tera = "1"
rand = "0.8"
base64 = "0.21" # Updated to a more recent version, common is 0.21 or 0.13
# actix-cookie-session is now part of actix-session, use CookieSession from there.
# No separate actix-cookie-session crate needed.
# Ensure smb_handler::SmbCreds derives Serialize and Deserialize (already done)
